# api/app/Http/Controllers/LocalitateController.php
@@ -18,8 +18,7 @@ class LocalitateController extends Controller
      */
     public function __construct()
     {
-        // set authorization only for specific methods
-        $this->middleware('auth', ['only' => ['index']]);
+        $this->middleware('auth', ['only' => ['index', 'localitatiByJudet']]);
     }
 
     /**
@@ -30,13 +29,17 @@ class LocalitateController extends Controller
      */
     public function index()
     {
-//        $authUser = Auth::user();
-        $collection = Localitate::with(['judet' => function($query) { $query->where('deleted_at',null); }])->where('deleted_at', null)->get();
-        return response()->json($collection);
+        if(Auth::user()->hasPermission('browse_localitati')){
+            $collection = Localitate::with(['judet' => function($query) { $query->where('deleted_at',null); }])->where('deleted_at', null)->get();
+            return response()->json($collection);
+        } else {
+            return response()->json(['error' => 'Unauthorized'], 401);
+        }
     }
 
     /**
      * Get individual record Localitate, by ID
+     * Read our Data Type B(R)EAD
      *
      * @param integer $id - Localitate ID
      * @return array JSON
@@ -50,6 +53,7 @@ class LocalitateController extends Controller
 
     /**
      * Get individual record Localitate, by Slug
+     * Read our Data Type B(R)EAD
      *
      * @param string $slug - Localitate slug
      * @return array JSON
@@ -70,9 +74,12 @@ class LocalitateController extends Controller
      */
     public function localitatiByJudet($slug)
     {
-        $modelJudet = Judet::select('id')->where(['slug' => $slug, 'deleted_at' => null])->first();
-        $collection = Localitate::where(['judet_id' => $modelJudet->id, 'deleted_at' => null])->get();
-
-        return response()->json($collection);
+        if(Auth::user()->hasPermission('browse_localitati')){
+            $modelJudet = Judet::select('id')->where(['slug' => $slug, 'deleted_at' => null])->first();
+            $collection = Localitate::where(['judet_id' => $modelJudet->id, 'deleted_at' => null])->get();
+            return response()->json($collection);
+        } else {
+            return response()->json(['error' => 'Unauthorized'], 401);
+        }
     }
 }
