# documentatie/api.yaml
@@ -16,10 +16,184 @@ servers:
   - url: 'https://staging.api.dsu.ro'
   - url: 'https://dsu.civictech.local'
 paths:
+  /users/login:
+    post:
+      summary: autentificare utilizator
+      description: 'Autentifica un utilizator pe baza parolei si user-name (email) si returneaza un token criptat pentru access API'
+      parameters:
+        - in: header
+          name: Content-Type
+          required: true
+          schema:
+            type: string
+            default: application/json
+      requestBody:
+        description: Datele pentru autentificare
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - parola
+              properties:
+                email:
+                  type: string
+                  example: "tudor.rusu@hotmail.com"
+                parola:
+                  type: string
+                  example: "123654789"
+      tags:
+        - utilizatori
+      responses:
+        '200':
+          description: Success. API Token criptat.
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  api_key: "eyJpdiI6IlpOQ04wTURNcUEzK0dsMlE2OW5paGc9PSIsInZhbHVlIjoiZExURk1maHV6bHRIaU5lQkMyMStPM3RRMzQwRnZuK3ZXdThNUG9FemEyNGpjN3JXNGxaVTBYVlZwdWJFeWIzMlE2SlhLZXk1aWxTXC9NU2szRmlOd1dxbWRUbzRjc1YzdTI4VFdpSVcrdmh3PSIsIm1hYyI6IjUyMGRlZDJkMTk5NDFhMmM5MDEyMzIwNmNlNmIwMGE4OGZiNTA3NzRlYjUwZjNkMWZmNTUzMGQyYmIxZjFjOWMifQ=="
+  /users/logout:
+    post:
+      summary: deautentificare utilizator
+      description: 'Deautentifica un utilizator pe baza token-ului criptat'
+      security:
+        - apiKey: []
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          schema:
+            type: string
+            default: bearer {token}
+      tags:
+        - utilizatori
+      responses:
+        '200':
+          description: Success. API Token criptat.
+          content:
+            application/json:
+              schema:
+                type: array
+                example:
+                  status: "success"
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+  /users/{id}:
+    get:
+      summary: READ - utilizator
+      description: 'Returneaza un user bazat pe id, inclusiv relatii'
+      security:
+        - apiKey: []
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          schema:
+            type: string
+            default: bearer {token}
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+          description: ID-ul utilizatorului
+      tags:
+        - utilizatori
+      responses:
+        '200':
+          description: Success. Obiect JSON cu utilizatorul.
+          content:
+            application/json:
+              schema:
+                type: array
+                example:
+                  - id: 5
+                    nume: "Tester"
+                    email: "tester.structura@dsu.ro"
+                    created_at: "2018-03-26 16:41:19"
+                    updated_at: "2018-03-26 16:41:19"
+                    avatar: "users/default.png"
+                    role_id: 6
+                    deleted_at: null
+                    prenume: "Structura Smurd"
+                    telefon_s: null
+                    telefon_p: null
+                    adresa: null
+                    cod_postal: null
+                    localitate: null
+                    judet: null
+                    unitate_id: 7
+                items:
+                  $ref: '#/components/schemas/Users'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+  /users/email/{email}:
+    get:
+      summary: READ - utilizator
+      description: 'Returneaza un user bazat pe email, inclusiv relatii'
+      security:
+        - apiKey: []
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          schema:
+            type: string
+            default: bearer {token}
+        - in: path
+          name: email
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+          description: email-ul utilizatorului
+      tags:
+        - utilizatori
+      responses:
+        '200':
+          description: Success. Obiect JSON cu utilizatorul.
+          content:
+            application/json:
+              schema:
+                type: array
+                example:
+                  - id: 5
+                    nume: "Tester"
+                    email: "tester.structura@dsu.ro"
+                    created_at: "2018-03-26 16:41:19"
+                    updated_at: "2018-03-26 16:41:19"
+                    avatar: "users/default.png"
+                    role_id: 6
+                    deleted_at: null
+                    prenume: "Structura Smurd"
+                    telefon_s: null
+                    telefon_p: null
+                    adresa: null
+                    cod_postal: null
+                    localitate: null
+                    judet: null
+                    unitate_id: 7
+                items:
+                  $ref: '#/components/schemas/Users'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
   /localitati:
     get:
       summary: BROWSE - localitati
-      description: 'Returneaza toata colectia Localitati, inclusiv relatii'
+      description: 'Returneaza toata colectia Localitati, inclusiv relatii, bazat pe rolul utilizatorului'
+      security:
+        - apiKey: []
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          schema:
+            type: string
+            default: bearer {token}
       tags:
         - localitati
       responses:
@@ -60,11 +234,21 @@ paths:
                       deleted_at: null
                 items:
                   $ref: '#/components/schemas/Localitati'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
   /localitati/judet/{slug}:
     get:
       summary: BROWSE - localitati dintr-un judet
       description: 'Returneaza toate localitatile dintr-um judet, bazat pe slug-ul judetului'
+      security:
+        - apiKey: []
       parameters:
+        - in: header
+          name: Authorization
+          required: true
+          schema:
+            type: string
+            default: bearer {token}
         - in: path
           name: slug
           required: true
@@ -111,9 +295,11 @@ paths:
                       deleted_at: null
                 items:
                   $ref: '#/components/schemas/Localitati'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
   /localitati/{id}:
     get:
-      summary: READ - localitati
+      summary: READ - localitate
       description: 'Returneaza o localitate bazat pe id, inclusiv relatii'
       parameters:
         - in: path
@@ -151,7 +337,7 @@ paths:
                   $ref: '#/components/schemas/Localitati'
   /localitati/slug/{slug}:
     get:
-      summary: READ - localitati
+      summary: READ - localitate
       description: 'Returneaza o localitate bazat pe slug, inclusiv relatii'
       parameters:
         - in: path
@@ -187,6 +373,13 @@ paths:
                 items:
                   $ref: '#/components/schemas/Localitati'
 components:
+  responses:
+    UnauthorizedError:
+      description: Token-ul lipseste sau este incorect - '{"error":"Unauthorized"}'
+  securitySchemes:
+    apiKey:
+      type: http
+      scheme: bearer
   schemas:
     Localitati:
       type: object
